# CodeCollector

./: .gitignore  MANIFEST.in  README.md  collector.py  config.py  main.py  main_class.py  models.py  pyproject.toml  selector.py  setup.py  writers.py
codecollector/: __init__.py  collector.py  config.py  main.py  selector.py  utils.py
